# Sermon-Bingo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
sermon_bingo/: __main__.py
src/sermon_bingo/: __main__.py
tests/: test_main.py
