[tool.poetry]
name = "sermon-bingo"
version = "0.1.0"
description = ""
authors = ["Caleb Courtney"]
readme = "README.md"
packages = [{include = "src/sermon_bingo"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
black = "^24.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
